# math-eval

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
examples/: CMakeLists.txt  bench.c  example.c
include/math_eval/: container.h  evaluator.h  log.h  parser.h  symbol_table.h  token.h  tokenizer.h
src/: evaluator.c  log.c  parser.c  symbol_table.c  token.c  tokenizer.c
tests/: CMakeLists.txt  test.c  test.py  test_complete.txt
